tests/cases/positive/syntax/records/canNameLastParam.lam
-- you can name the last parameter of a record
record Foo (A : Level) : Type 0 where
