tests/cases/negative/syntax/namedSortOfRecord.lam
-- you can't name the sort of a record
record Test : (x : Type 0) where
